# jarvis-azure

./: .env.example  .gitignore  Dockerfile  README.md  agent_memory.db  agents.db  brain.py  chroma.sqlite3  conversation.py  conversationbot  dialogue.py  jarvis.py  jarvis_brain.pkl  memory_Yusuf.jsonl  pyproject.toml  requirements.txt  training with thoughts.jsonl  training with thoughts.txt  training.jsonl
.chromadb_autogen/: chroma.sqlite3
.github/workflows/: deploy-image-ghcr.yml  docker-publish-ghcr.yml  ghcr-to-azure.yml  jarvis-app-AutoDeployTrigger-1faf2e5c-2267-44c8-b33a-3dccbe580bd2.yml  jarvis-app-AutoDeployTrigger-74c51030-96c2-44b3-8ab6-412628c78c8c.yml  jarvis-app-AutoDeployTrigger-9af5d8bb-7795-46b7-8fdb-d194dbed4d6a.yml  jarvis-app-AutoDeployTrigger-be23449b-5e0a-4d94-8a69-b9ad742ce4c5.yml  jarvis-app-AutoDeployTrigger-fc8e001f-70c6-46be-b936-a4a81f42c6ca.yml  jarvis-app-AutoDeployTrigger-fe916456-3d0a-4042-b95a-5a9c31a1dafb.yml  jarvis-azure-AutoDeployTrigger-bd46f8b9-09ea-46ad-9081-167f8a888401.yml  jarvis-azure-AutoDeployTrigger-f830c639-45a3-46d3-bcb0-9d347428f715.yml  jarvis-reloaded-AutoDeployTrigger-12a0dcc3-c25a-4622-8d8b-808b2c03e488.yml
chroma_db/: chroma.sqlite3
tmp/: agent_memory.db  agents.db
