[tool.poetry]
name = "jarvis-azure"
version = "0.1.1"
description = "Jarvis AI bot, powered by Azure OpenAI"
authors = ["Yusuf Kaka <yusufk@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
openai = "^1.37.1"
python-telegram-bot = {extras = ["webhooks","helpers"], version = "^21.3"}
python-dotenv = "^0.21.1"
telegramify-markdown = "^0.3.2"
autogen-agentchat = "^0.4.8.2"
autogen-ext = {extras = ["azure", "openai", "web-search"], version = "^0.4.8.2"}
bs4 = "^0.0.2"
requests = "^2.32.3"
pyautogen = "^0.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
